syntax = "proto3";
package protobuf;
option go_package = "";
message deviceGister{
  string  type = 1;
  string deviceId = 2;
}