syntax = "proto3";
package protobuf;
option go_package = "";
message deviceMap{
  repeated string deviceId = 1;
}